fix on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -494,7 +494,7 @@ nav ul ul li a:hover{
         margin-right: 5%;
     }
 
-    .project-content h2 {
+    .project-header {
         max-width: 100%;
         margin-left: 0;
         margin-right: 0;
